<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/nav_home"
        android:icon="@drawable/ic_launcher_home_foreground"
        android:title="@string/nav_home" />
    <item android:id="@+id/nav_contest"
        android:icon="@drawable/ic_launcher_leaderboard_foreground"
        android:title="@string/nav_contest"/>
    <item android:id="@+id/nav_write"
        android:icon="@drawable/ic_launcher_write_foreground"
        android:title="@string/nav_write"/>
    <item android:id="@+id/nav_bookmark"
        android:icon="@drawable/ic_launcher_bookmark_foreground"
        android:title="@string/nav_bookmark"/>
    <item android:id="@+id/nav_profile"
        android:icon="@drawable/ic_launcher_person_foreground"
        android:title="@string/nav_profile"/>

</menu>